crud organizado y hexagonal para un admin de la aplicacion
