# dao/src/main/java/org/jacobo/adyd/infraestructure/persistence/CampaignJpaRepository.java
@@ -1,7 +1,24 @@
 package org.jacobo.adyd.infraestructure.persistence;
 
+import org.jacobo.adyd.domain.model.CampaignModel;
 import org.jacobo.adyd.infraestructure.entities.CampaignEntity;
+import org.jacobo.adyd.infraestructure.entities.RaceEntity;
+import org.jacobo.adyd.infraestructure.projection.CampaignRaceProjection;
 import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.data.jpa.repository.Modifying;
+import org.springframework.data.jpa.repository.Query;
+import org.springframework.data.repository.query.Param;
+
+import java.util.List;
+import java.util.Set;
 
 public interface CampaignJpaRepository extends JpaRepository<CampaignEntity, Long> {
+
+    @Query("""
+        SELECT c.name as campaignName, r.name as raceName, r.id as raceId FROM CampaignEntity c JOIN c.raceEntities r WHERE c.id = :campaignId
+    """)
+    List<CampaignRaceProjection> findAllRacesByCampaignId(Long campaignId);
+
+    void deleteCampaignEntitiesByRaceEntities(Set<RaceEntity> raceEntities);
+
 }
